syntax = "proto3";
package Proto;

// 本文件中的所有结构，都是会存在DB中的

message Vector3D {
	float x = 1;
	float y = 2;
	float z = 3;
}

enum Gender {
	none = 0;
	male = 1;
	female = 2;
}

message PlayerBase {
	Gender gender = 1;
	int32 level = 2;
	int32 xp = 3;
	int32 hp = 4;
	int32 mp = 5;
	int32 atk = 6;
	int32 def = 7;
}

// 登录上一次的地图，两种情况
// 上次离开时，是一个公共地图，那么直接回到公共地图
// 上次离开时，是从一个副本离开的，如果副本SN还能找到，就再次进入副本
message LastWorld {
	int32 world_id = 1;	
	int64 world_sn = 2;
	Vector3D position = 3;
}

message PlayerMisc {
	LastWorld last_world = 1;	// 公共地图
	LastWorld last_dungeon = 2;	// 副本地图
	int32 online_version = 3;	// 在线版本（乐观锁）
}

message Player {
	uint64 sn = 1;
	string name = 2;
	PlayerBase base = 3;
	PlayerKnap knap = 4;
	PlayerMisc misc = 5;
}

message ItemData {
	enum ItemType {
		None = 0;
		Potion = 1;
		Weapon = 2;
	}
	uint64 sn = 1;
	ItemType type = 2;
	int32 id = 3;
	int32 index = 4;
}

message PlayerKnap {
	int32 gold = 1;
	repeated ItemData bag_items = 2;
	repeated ItemData act_items = 3;
	repeated ItemData equ_items = 4;
}

message UpdateKnapItem {
	ItemData item = 1;
}
